--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,16 @@
         android:orientation="vertical"
         android:layout_height="match_parent">
 
-        
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="Welcome"
+            android:textStyle="bold"
+            android:layout_height="wrap_content"
+            android:textSize="40sp"
+            android:textColor="@color/text_color"
+            android:layout_marginTop="10dp"
+            android:layout_gravity="center" />
 
         <TextView
             android:layout_width="163dp"
