--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -2,98 +2,69 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/background">
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:textAlignment="center">
+
+
+        <TextView
+            android:id="@+id/budgy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="196dp"
+            android:elegantTextHeight="false"
+            android:shadowColor="#000"
+            android:shadowDx="-2"
+            android:shadowDy="-2"
+            android:shadowRadius="5"
+            android:text="Budgy"
+            android:textAlignment="center"
+            android:textColor="@color/budgy_def"
+            android:textSize="96sp"
+            android:textStyle="bold"/>
+
         <TextView
             android:layout_width="wrap_content"
-            android:text="Welcome"
-            android:textStyle="bold"
             android:layout_height="wrap_content"
-            android:textSize="40sp"
-            android:textColor="@color/text_color"
-            android:layout_marginTop="10dp"
             android:layout_gravity="center"
-            android:transitionName="textview" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:text="Let's get started"
-            android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_gravity="center"
+            android:layout_marginStart="10dp"
+            android:text="Your Budgeting Companion"
+            android:textAlignment="center"
             android:textColor="@color/text_color"
-            android:layout_marginStart="10dp"/>
-
-        <soup.neumorphism.NeumorphCardView
-            android:layout_width="match_parent"
-            android:id="@+id/layout_email"
-            android:layout_height="wrap_content"
-            app:neomorph_view_type="rectangular"
-            app:neomorph_shadow_type="outer"
-            android:layout_above="@+id/layout_pass"
-            app:neomorph_corner_radius="10dp"
-            app:neomorph_elevation="6dp"
-            app:neomorph_background_color="@color/background"
-            app:neomorph_shadow_color="@color/shadow_color"
-            app:neomorph_highlight_color="@color/highlight">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:gravity="center"
-                android:textColor="@color/text_color"
-                android:layout_height="match_parent"
-                android:textColorHint="@color/text_color"
-                android:padding="14dp"
-                android:inputType="textEmailAddress"
-                android:paddingEnd="10dp"
-                android:background="@android:color/transparent"
-                android:hint=" Email"
-                android:autofillHints="" />
-        </soup.neumorphism.NeumorphCardView>
-
-        <soup.neumorphism.NeumorphCardView
-            android:id="@+id/layout_pass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:neomorph_view_type="rectangular"
-            app:neomorph_shadow_type="outer"
-            app:neomorph_elevation="6dp"
-            app:neomorph_corner_radius="10dp"
-            app:neomorph_background_color="@color/background"
-            app:neomorph_shadow_color="@color/shadow_color"
-            app:neomorph_highlight_color="@color/highlight">
-
-            <EditText
-                android:gravity="center"
-                android:padding="14dp"
-                android:paddingEnd="10dp"
-                android:layout_width="match_parent"
-                android:id="@+id/password"
-                android:layout_height="match_parent"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:textColor="@color/text_color"
-                android:autofillHints=""
-                android:textColorHint="@color/text_color"
-                android:background="@android:color/transparent"
-                tools:ignore="RtlSymmetry" />
-        </soup.neumorphism.NeumorphCardView>
+            android:textSize="20sp" />
 
         <soup.neumorphism.NeumorphButton
+            android:id="@+id/login"
+            style="@style/Widget.Neumorph.Button"
             android:layout_width="200dp"
-            android:textSize="16dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="Sign In"
-            android:textColor="@color/text_color"
-            style="@style/Widget.Neumorph.Button">
-        </soup.neumorphism.NeumorphButton>
+            android:layout_marginTop="20dp"
+            android:backgroundTint="#E2EBF5"
+            android:text="Log In"
+            android:textColor="@color/budgy_def"
+            android:textSize="16dp" />
+
+        <soup.neumorphism.NeumorphButton
+            android:id="@+id/signup"
+            style="@style/Widget.Neumorph.Button"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="5dp"
+            android:background="@color/budgy_def"
+            android:backgroundTintMode="add"
+            android:text="Sign Up"
+            android:textColor="@color/white"
+            android:textSize="16dp"
+            app:neumorph_backgroundColor="@color/budgy_def" />
     </LinearLayout>
 </RelativeLayout>
