--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="shadow_color">#d9dbde</color>
     <color name="budgy_def">#686D86</color>
     <color name="background">#E6E9EB</color>
+    <color name="ligh_background">#ecf0f3</color>
 
 </resources>
