--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,13 +6,13 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="grey_blue">#414453</color>
     <color name="white">#FFFFFFFF</color>
     <color name="text_color">#1E4175</color>
-    <color name="background_color">#ecf0f3</color>
     <color name="highlight">#ffffff</color>
     <color name="shadow_color">#d9dbde</color>
     <color name="budgy_def">#686D86</color>
     <color name="background">#E6E9EB</color>
-    <color name="ligh_background">#ecf0f3</color>
+    <color name="light_background">#ecf0f3</color>
 
 </resources>
